# bashdb

./: .cvsignore  .gitignore  AUTHORS  CHANGES  ChangeLog  ChangeLog.0  INSTALL  Makefile.am  NEWS  NEWS.md  README  README-git.md  README.CVS  README.gitbranch.md  README.md  THANKS  THANKS.md  TODO  acinclude.m4  autogen.sh  bashdb-main.inc  bashdb-main.inc.in  bashdb-part2.sh  bashdb-trace.in  bashdb.in  check-prefix.sh  compute-prefix.sh  config.h.in  configure.ac  dbg-brk.inc  dbg-cmds.inc  dbg-commands.inc  dbg-complete.inc  dbg-edit.inc  dbg-file.inc  dbg-fns.inc  dbg-help.inc  dbg-hist.inc  dbg-info.inc  dbg-init.inc  (+26 more)
builtin/: .cvsignore  .gitignore  Makefile.am  readarray.c  readc  readc.c  set0.c
command/: Makefile.am  action.sh  alias.sh  backtrace.cmd  backtrace.sh  break.sh  clear.sh  commands.cmd  commands.sh  complete.sh  condition.cmd  condition.sh  continue.cmd  continue.sh  debug.sh  delete.cmd  delete.sh  disable.cmd  disable.sh  display.sh  down.cmd  down.sh  edit.cmd  edit.sh  enable.cmd  enable.sh  eval.sh  examine.sh  export.sh  file.cmd  file.sh  finish.sh  frame.cmd  frame.sh  handle.cmd  handle.sh  help.cmd  help.sh  history.sh  info.sh  (+41 more)
command/info_sub/: Makefile.am  args.sh  breakpoints.sh  brkpts.sh  display.sh  files.sh  functions.sh  handle.sh  line.sh  program.sh  signals.sh  source.sh  stack.sh  variables.sh  warranty.sh  watchpoints.sh
command/set_sub/: Makefile.am  annotate.sh  args.sh  autoeval.sh  autolist.sh  basename.sh  debugging.sh  different.sh  dollar0.sh  editing.sh  filename-display.sh  highlight.sh  history.sh  linetrace.sh  linewidth.sh  listsize.sh  prompt.sh  showcommand.sh  style.sh  trace-commands.sh  width.sh
command/show_sub/: Makefile.am  alias.sh  annotate.sh  args.sh  autoeval.sh  autolist.sh  basename.sh  commands.sh  debug.sh  debugging.sh  different.sh  editing.sh  filename-display.sh  highlight.sh  listsize.sh  style.sh  warranty.sh  width.sh
commands/: Makefile.am  backtrace.cmd  debug.cmd  down.cmd  eval.cmd  examine.cmd  file.cmd  kill.cmd  print.cmd  pwd.cmd  quit.cmd  trace.cmd  tty.cmd
doc/: .cvsignore  .gitignore  Makefile.am  README.md  bashdb-man.pod  bashdb.texi  bashdb.texi.in  copyright.texi  gpl.texi  how-to-make-a-release.md  macros.texi.in  notecase-HTML.sh
emacs/: .cvsignore  .gitignore  Makefile.am  bashdb-test.el  bashdb-test.el.in  bashdb.el  gud.el  gud.el.diff
integration/: Makefile.am  README  brkpt1.tests  brkpt2.tests  brkpt3.tests  bug-source.tests  interrupt.tests  lopts.tests  multi.sh  setshow.tests  settrace.tests  sig.tests  sopts.tests  subshell1.tests  subshell2.tests  subshell3.tests  subshell4.tests  test-action  test-brkpt  test-bug-args  test-bug-source  test-bugIFS  test-command  test-complete  test-debug  test-display  test-finish  test-frame  test-interrupt  test-list  test-misc  test-multi  test-opts  test-parm  test-restart  test-search  test-setshow  test-settrace  test-sig  test-skip  (+7 more)
lib/: .cvsignore  Makefile.am  action.sh  alias.sh  break.sh  brk.inc  brk.sh  columnize.sh  commands.inc  commands.sh  complete.inc  complete.sh  dbg-call.sh  display.sh  file.inc  file.sh  filecache.sh  fns.inc  fns.sh  frame.sh  help.inc  help.sh  hist.inc  hist.sh  hook.sh  info.inc  info.sh  journal.inc  journal.sh  list.inc  list.sh  log.inc  msg.sh  pre.inc.in  processor.inc  processor.sh  require.sh  run.inc  save-restore.sh  set.inc  (+13 more)
test/: .cvsignore  .gitignore  Makefile.am  README  action.cmd  action.right  action.tests  brkpt1.cmd  brkpt1.right  brkpt1.tests  brkpt2.cmd  brkpt2.right  brkpt2.tests  brkpt3.cmd  brkpt3.right  brkpt3.tests  bug-args.cmd  bug-args.right  bug-args.sh  bug-args.sh.in  bug-args.tests  bug-source.cmd  bug-source.right  bug-source.tests  bugIFS  bugIFS.cmd  bugIFS.right  bugIFS.sh.in  bugIFS.tests  check-common.sh.in  check_common.in  command.cmd  command.right  command.tests  complete.cmd  complete.right  complete.tests  continue.cmd  dbg-test1.sh  dbg-test1.sub  (+158 more)
test/data/: Makefile.am  README  action.cmd  action.right  bash-rematch.cmd  bash-rematch.right  brkpt1.cmd  brkpt1.right  brkpt2.cmd  brkpt2.right  brkpt3.cmd  brkpt3.right  bug-args.right  bug-break.cmd  bug-break.right  bug-clear.cmd  bug-clear.right  bug-loc.cmd  bug-loc.right  bug-set-e.cmd  bug-set-e.right  bug-source.cmd  bug-source.right  bug-step-subshell.cmd  bug-step-subshell.right  bug-step.cmd  bug-step.cmd~  bug-step.right  bugI.cmd  bugI.right  bugIFS.cmd  bugIFS.right  command.cmd  command.right  complete.cmd  complete.right  continue.cmd  debug.cmd  debug.right  debug2.cmd  (+71 more)
test/example/: .cvsignore  .gitignore  Makefile.am  README  bash-rematch.sh  bug-args.sh.in  bug-loc.sh  bug-set-e.sh  bug-step-subshell.sh  bug-step.sh  bugI.sh  bugIFS.sh.in  dbg-test1.sh  debug.sh  false.sh.in  fib.sh  gcd.sh  hanoi.sh.in  interrupt.sh  interrupt.sh.in  library.sh  nexting.sh  restartbug.sh  settrace.sh  sig-bug.sh  sig.sh  stepping.sh  subshell.sh
test/integration/: .cvsignore  .gitignore  Makefile.am  README.md  brkpt1.tests  brkpt2.tests  brkpt3.tests  bug-source.tests  check-common.sh.in  interrupt-3.tests  interrupt.tests  lopts.tests  multi.sh  setshow.tests  settrace.tests  sig.tests  sopts.tests  subshell1.tests  subshell2.tests  subshell3.tests  subshell4.tests  test-action  test-bash-rematch.in  test-brkpt  test-bug-args  test-bug-break  test-bug-break.in  test-bug-clear  test-bug-loc  test-bug-set-e  test-bug-source  test-bug-step-subshell  test-bug-step-subshell.in  test-bugIFS  test-command  test-complete  test-complete.in  test-debug  test-debug.in  test-delete.in  (+34 more)
test/unit/: .cvsignore  .gitignore  Makefile.am  helper.sh  mock-cmd.sh  require_me.sh  shunit2  test-action.sh.in  test-alias.sh.in  test-bashdb-trace.sh  test-bashdb-trace.sh.in  test-break.sh.in  test-cmd-complete.sh.in  test-cmd-eval.sh.in  test-columns.sh.in  test-eval.sh.in  test-file.sh.in  test-filecache.sh.in  test-fns.sh.in  test-frame.sh.in  test-get-sourceline.sh.in  test-io.sh.in  test-lib-eval.sh.in  test-lib-list.sh.in  test-logging.sh.in  test-msg.sh.in  test-pre.sh.in  test-require.sh.in  (+7 more)
(+15 files in other folders)
